{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 38,
  "lineage": "b8d4a12d-5d96-670e-9bd7-f6588fd49461",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/frontendIPConfigurations/pip",
                "name": "pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/publicIPAddresses/pip-loadbalancer"
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app",
            "location": "westeurope",
            "name": "load-balancer-app",
            "resource_group_name": "rg-demo-lb-vm-02",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pip-lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/backendAddressPools/backend-pool",
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app",
            "name": "backend-pool"
          },
          "dependencies": [
            "azurerm_lb.lb-public",
            "azurerm_public_ip.pip-lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_outbound_rule",
      "name": "outbound-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocated_outbound_ports": 1024,
            "backend_address_pool_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/backendAddressPools/backend-pool",
            "enable_tcp_reset": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/frontendIPConfigurations/pip",
                "name": "pip"
              }
            ],
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/outboundRules/OutboundRule",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app",
            "name": "OutboundRule",
            "protocol": "All"
          },
          "dependencies": [
            "azurerm_lb.lb-public",
            "azurerm_lb_backend_address_pool.backend-pool",
            "azurerm_public_ip.pip-lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/probes/probe-http",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app",
            "name": "probe-http",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_lb.lb-public",
            "azurerm_public_ip.pip-lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/backendAddressPools/backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": true,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/frontendIPConfigurations/pip",
            "frontend_ip_configuration_name": "pip",
            "frontend_port": 80,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/loadBalancingRules/lb-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app",
            "name": "lb-rule",
            "probe_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/probes/probe-http",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.lb-public",
            "azurerm_lb_backend_address_pool.backend-pool",
            "azurerm_lb_probe.probe-http",
            "azurerm_public_ip.pip-lb",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/networkInterfaces/nic-vm",
            "internal_domain_name_suffix": "nalavtwqcrze5lxedjk3ifkosc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app"
              }
            ],
            "location": "westeurope",
            "name": "nic-vm",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-demo-lb-vm-02"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "nic-backenpool-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/backendAddressPools/backend-pool",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/networkInterfaces/nic-vm/ipConfigurations/internal|/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/loadBalancers/load-balancer-app/backendAddressPools/backend-pool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/networkInterfaces/nic-vm"
          },
          "dependencies": [
            "azurerm_lb.lb-public",
            "azurerm_lb_backend_address_pool.backend-pool",
            "azurerm_network_interface.nic_vm",
            "azurerm_public_ip.pip-lb",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app",
            "location": "westeurope",
            "name": "nsg-subnet-app",
            "resource_group_name": "rg-demo-lb-vm-02",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rule-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "10.0.0.0/24"
            ],
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app/securityRules/rule-allow-http",
            "name": "rule-allow-http",
            "network_security_group_name": "nsg-subnet-app",
            "priority": 1000,
            "protocol": "*",
            "resource_group_name": "rg-demo-lb-vm-02",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/publicIPAddresses/pip-loadbalancer",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.126.254.186",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-loadbalancer",
            "resource_group_name": "rg-demo-lb-vm-02",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1",
              "2",
              "3"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app",
            "name": "subnet-app",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-demo-lb-vm-02",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-demo-lb-vm-02",
            "virtual_network_name": "vnet-app"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app",
            "network_security_group_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/networkSecurityGroups/nsg-subnet-app",
            "subnet_id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/virtualNetworks/vnet-app/subnets/subnet-app"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet-app",
            "azurerm_virtual_network.vnet-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ce0a1668-14d0-4f72-aee4-1a55d4154e92",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/virtualNetworks/vnet-app",
            "location": "westeurope",
            "name": "vnet-app",
            "resource_group_name": "rg-demo-lb-vm-02"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/38977b70-47bf-4da5-a492-88712fce8725/resourceGroups/rg-demo-lb-vm-02/providers/Microsoft.Network/publicIPAddresses/pip-bastion",
            "idle_timeout_in_minutes": 4,
            "ip_address": "137.117.180.137",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion",
            "resource_group_name": "rg-demo-lb-vm-02",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}